--- a/style.css
+++ b/style.css
@@ -6,5 +6,34 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: lightblue;
+  background-color: rgb(26, 31, 39);
+}
+
+.container-fluid {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  padding: 1rem;
+  background-color: blue;
+}
+
+.mover-box {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  text-transform: uppercase;
+  text-shadow: 0 0 10px white;
+  align-items: center;
+  color: white;
+  width: 10rem;
+  height: 10rem;
+  background-color: black;
+  border-radius: 1.5rem;
+  box-shadow: rgba(231, 231, 231, 0.773) 5px 5px 25px,
+    rgba(0, 0, 0, 0.22) 0 0 5px;
 }
