--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 .container {
+  display: flex;
   width: 100%;
   height: 100vh;
   padding: 1rem;
@@ -36,4 +37,84 @@ body {
   border-radius: 1.5rem;
   box-shadow: rgba(231, 231, 231, 0.773) 5px 5px 25px,
     rgba(0, 0, 0, 0.22) 0 0 5px;
+  animation: mover-box 10s linear;
+}
+
+@keyframes mover-box {
+  0% {
+    margin-top: 0%;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+  }
+
+  10% {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 50%;
+  }
+
+  20% {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 88%;
+  }
+
+  30% {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 88%;
+  }
+
+  40% {
+    margin-top: 30%;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 88%;
+  }
+
+  50% {
+    margin-top: 30%;
+    margin-left: 0;
+    margin-right: 50%;
+    margin-bottom: 0;
+  }
+
+  60% {
+    margin-top: 30%;
+    margin-left: 0;
+    margin-right: 85%;
+    margin-bottom: 0;
+  }
+
+  70% {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 85%;
+    margin-bottom: 100%;
+  }
+
+  80% {
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 50%;
+  }
+
+  90% {
+    margin-top: 10%;
+    margin-left: 50%;
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+
+  100% {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+  }
 }
